chore: minor doc improvement

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -49,7 +49,7 @@ To prevent this from happening - ILC uses prepare/execute pattern to synchronize
 
 **Example:**
 
-```jsx
+```javascript
 class Root extends React.Component {
     constructor(props) {
         super(props);
