docs: added ignore rule for variable macro for several false-positive pages

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -1,3 +1,7 @@
+---
+ignore_macros: true
+---
+
 # Internationalization 
 
 ILC comes with built in internationalization support, so you can easily run micro frontends on the websites which 
