docs: revised i18n doc

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -2,56 +2,55 @@
 ignore_macros: true
 ---
 
-# Internationalization 
+# Internationalization
 
-ILC comes with built in internationalization support, so you can easily run micro frontends on the websites which 
-require support of the multiple languages.
-
-However, you need to keep in mind that ILC does only part of the job for you. Support of the i18n capabilities from the 
-micro frontends side is required.
+With built-in internationalization support, you can use ILC to run micro frontends on websites that require a multilingual presence.
+!!! warning ""
+    Internationalization support is not comprehensive, though. You still need to provide i18n capabilities from the micro-frontends side.
 
 ## Routing
 
-ILC uses 2-tier routing model. It means that:
- 1. ILC itself handles only global routing (says which set of apps should be loaded at particular URL) 
- 2. Micro Frontend has own routing in place which determines component to be rendered. 
- 
-### 1st tier - ILC
+ILC uses a 2-tier routing model:
 
-While having i18n feature enabled - ILC allows you to handle localized URLs at global level. 
-Currently, we support two routing schemes:
-- Prefixing all routes with the locale except those of the default locale
-- Prefixing all routes with the locale
+1. ILC handles only global routing that determines what applications should be loaded at which URL.
+1. Micro frontend has its own routing that determines components to be rendered.
 
-In Registry, you continue to specify all routes in Registry w/o locale information. 
+### 1st tier: ILC
 
-### 2nd tier - Micro Frontend
-When dealing with internationalization - we obviously don't want to hardcode localized links in the source code of 
-every micro frontend that we run with ILC. Instead, it's better to separate concerns.
+ILC allows you to handle localized URLs globally - make sure that the `i18n.enabled` parameter is enabled in the ILC Registry.
 
-Such approach allows to be flexible in the selection of the localization pattern for your URLs, and you can manage
-this behaviour from central place. 
+Currently, ILC supports two routing schemes:
 
-The other thing that we need to consider - is the fact that process & business logic of actual `location.href` un-localization before use
-in the app's router & localization of the URLs before rendering into the DOM should be synchronized across all applications
-and ILC itself. 
+- Prefixing all routes with locale except those of the default locale.
+- Prefixing all routes with locale.
 
-To achieve that ILC provides [`IlcIntl` class](https://namecheap.github.io/ilc-sdk/classes/_app_ilcintl_.ilcintl.html)
- via [App SDK](https://github.com/namecheap/ilc-sdk) that can be used at CSR & SSR.
+In the Registry, you continue specifying all routes without locale information.
 
-**Examples:** 
-- [React with SSR](https://github.com/namecheap/ilc-demo-apps/blob/master/apps/navbar/src/root.component.js)
+### 2nd tier: Micro frontend
 
-## Synchronized language/currency change
+When dealing with internationalization in micro frontends, it is recommended to separate concerns as you don't want to hardcode localized links in the source code of every micro frontend.
 
-When customer wants to change locale or currency on the website - it's often impossible to immediately render an updated 
-content as loading of the localization files or updated prices is necessary. 
+Separation allows you to manage internationalization from a single place, and flexibly select localization patterns for your URLs.
 
-If we would only emit locale/currency change event and allow every micro frontend to deal with it on its own - customer 
-would likely see "blinking" of the UI as various parts of it will be re-rendered in different moments of time. 
-To prevent this from happening - ILC uses prepare/execute pattern to synchronize re-rendering of all micro frontends.
+Localization implies two processes:
 
-**Example:**
+1. Trimming actual `location.href` (to get locale) before passing the "normalized" URL to the application's router.
+1. Localization of the URL before rendering into the DOM.
+
+Both processes should be synchronized across all the applications and ILC. To do this, ILC provides [`IlcIntl` class](https://namecheap.github.io/ilc-sdk/classes/app.ilcintl.html) via [App SDK](https://github.com/namecheap/ilc-sdk) that can be used at SSR and CSR.
+
+**Example**: [React with SSR](https://github.com/namecheap/ilc-demo-apps/blob/master/apps/navbar/src/root.component.js)
+
+## Synchronized language / currency change
+
+Let's say the customer wants to change the locale or currency on the website. Usually, it's impossible to render an updated 
+content immediately as localization files or updated prices should be loaded first.
+
+If only the locale/currency change event is triggered, and every micro frontend would handle this event separately, the customer would likely see the blinking on the frontend as a result of re-rendering of parts of UI at different moments in time.
+
+To prevent blinking, ILC uses prepare/execute pattern to synchronize re-rendering of all micro frontends.
+
+### Example
 
 ```javascript
 class Root extends React.Component {
